added MINECRAFT_OPTS var + fixes